--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "license": "MIT",
   "scripts": {
     "serve": "live-server public/",
-    "build": "webpack",
+    "build:dev": "webpack",
+    "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
     "test": "jest --config=jest.config.json"
   },
   "dependencies": {
+    "add": "^2.0.6",
     "babel-cli": "6.24.1",
     "babel-core": "6.25.0",
     "babel-loader": "7.1.1",
@@ -21,7 +23,9 @@
     "css-loader": "0.28.4",
     "enzyme": "2.9.1",
     "enzyme-to-json": "1.5.1",
+    "extract-text-webpack-plugin": "^3.0.2",
     "jest": "20.0.4",
+    "latest-version": "^5.0.0",
     "live-server": "^1.2.0",
     "moment": "2.18.1",
     "node-sass": "4.5.3",
